# NeuralNetwork2

./: CMakeLists.txt  main.cpp
NeuralNet/: CMakeLists.txt
NeuralNet/include/: ActivationFunction.h  Layer.h  Matrix.h  NeuralNet.h  TraningSet.h
NeuralNet/source/: ActivationFunction.cpp  Layer.cpp  Matrix.cpp  NeuralNet.cpp
